<resources>
    <string name="app_name">ShoppingList</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Amount">Amount to get</string>
    <string name="Save">Save item</string>
    <string name="Item">Item name</string>
    <string name="Units">enter Units</string>
    <string name="Name">enter name</string>
    <string name="email">new email</string>
    <string name="password">new password</string>
    <string name="save">save</string>
    <string name="total">total</string>
    <string name="Count">Count</string>
</resources>
