<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aslan.amani.shoppinglist.ItimActivity">

    <EditText
        android:id="@+id/ItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Item"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Amount"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/etUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Units"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp" />

    <ImageButton
        android:id="@+id/iBtnImage"
        android:layout_width="365dp"
        android:layout_height="81dp"
        android:layout_marginRight="-3dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        tools:layout_editor_absoluteY="215dp" />

    <Button
        android:id="@+id/BtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="359dp" />
</android.support.constraint.ConstraintLayout>
